src/objects/Offer_Incentive_Outlet__c.object
<CustomObject>
    <description>Outlet associated with Offer Incentive</description>
    <fields>
        <fullName>Offer_Incentive_Property_Code__c</fullName>
        <formula>Text(Offer_Incentive_Property__r.Property__r.Property_Code__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offer Incentive Property Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Incentive_Property__c</fullName>
        <description>Offer Incentive Property</description>
        <inlineHelpText>Offer Incentive Property</inlineHelpText>
        <label>Offer Incentive Property</label>
        <referenceTo>Offer_Incentive_Property__c</referenceTo>
        <relationshipLabel>Offer Incentive Outlet</relationshipLabel>
        <relationshipName>Offer_Incentive_Outlet</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Outlet_Code__c</fullName>
        <formula>Outlet__r.Outlet_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outlet Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outlet_Description__c</fullName>
        <formula>Outlet__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outlet Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outlet_Type__c</fullName>
        <label>Outlet Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bars &amp; Nightlife</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dining/Casual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dining/Fine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment &amp; Shows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Golf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shopping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spa/Fitness</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Outlet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Outlet__c.Property__r.Property_Code__c</field>
                <operation>equals</operation>
                <valueField>$Source.Property_Code__c</valueField>
            </filterItems>
            <filterItems>
                <field>Outlet__c.Outlet_Type__c</field>
                <operation>equals</operation>
                <valueField>$Source.Outlet_Type__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Outlet__c</referenceTo>
        <relationshipLabel>Offer Incentive Outlet</relationshipLabel>
        <relationshipName>Offer_Incentive_Outlet</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Code__c</fullName>
        <globalPicklist>Property</globalPicklist>
        <label>Property Code</label>
        <type>Picklist</type>
    </fields>
    <label>Offer Incentive Outlet</label>
    <nameField>
        <displayFormat>OIO-{000000000}</displayFormat>
        <label>Offer Incentive Outlet Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offer Incentive Outlet</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>